--- a/pySrc/requirements.txt
+++ b/pySrc/requirements.txt
@@ -2,6 +2,7 @@ attrs==23.2.0
 beautifulsoup4==4.12.3
 certifi==2024.2.2
 cffi==1.16.0
+charset-normalizer==3.3.2
 et-xmlfile==1.1.0
 greenlet==3.0.3
 h11==0.14.0
@@ -15,6 +16,7 @@ pycparser==2.21
 PySocks==1.7.1
 python-dateutil==2.9.0.post0
 pytz==2024.1
+requests==2.31.0
 selenium==4.18.1
 six==1.16.0
 sniffio==1.3.1
