--- a/.gitignore
+++ b/.gitignore
@@ -12,19 +12,19 @@ __pycache__/
 
 ### NextJS ###
 # dependencies
-/node_modules
-/.pnp
+node_modules/
+.pnp
 .pnp.js
 
 # testing
-/coverage
+coverage/
 
 # next.js
-/.next/
-/out/
+.next/
+out/
 
 # production
-/build
+build
 
 # misc
 .DS_Store
